@@ -65,6 +65,9 @@
 	ipmi-sensors/ipmi-sensors/ipmi-sensors-oem-intel-s2600jf.h,
 	ipmi-sensors/ipmi-sensors-oem-intel-s5500wb.h: Fix header guard.
 
+	* libfreeipmi/api/ipmi-messaging-support-cmds-api.c
+	(ipmi_cmd_set_user_password): Remove unnecessary parameter checks.
+
 2019-11-27 Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/sdr/ipmi-sdr-parse-util.c
